Footer z-index fix

--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -296,7 +296,7 @@ footer {
 	bottom: 0;
 	width: 100%;
 	height: 96px;
-	z-index: 10;
+	z-index: 1;
 }
 
 div.pagewrap {
